--- a/template/styles/main.css
+++ b/template/styles/main.css
@@ -14,6 +14,8 @@ a {
 	padding: 1px 2px !important;
 
 	-webkit-transition: background-color 0.15s;
+	-webkit-transition: color 0.15s;
+
 	-webkit-border-radius: 2px;
 	-moz-border-radius: 2px;
 	border-radius: 2px;
