Upgraded to jQuery 1.4.2 and jQuery UI 1.8 beta. Replaced SyntaxHighlighter with Chili over licensing concerns with LGPL3. Changed how the constants page is rendered.

--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -21,9 +21,10 @@
 			<li><a href="http://github.com/skyzyx/vanity/">Vanity</a> &mdash; Uses PHP's Reflection API to generate source reference documentation. (MIT-licensed)</li>
 			<li><a href="http://github.com/voloko/sdoc/">SDoc</a> &mdash; The UI template with browse/search support. (MIT-licensed)</li>
 			<li><a href="http://code.google.com/p/spyc/">Spyc</a> &mdash; Pure PHP YAML parser. (MIT-licensed)</li>
-			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
+			<li><a href="http://code.google.com/p/jquery-chili-js/">Chili</a> &mdash; Syntax highlighter for source code. (MIT-licensed)</li>
+			<li><a href="http://jquery.com">jQuery</a> &mdash; A fast and concise JavaScript Library that simplifies HTML document traversing, event handling, animating, and Ajax interactions for rapid web development. (MIT-licensed)</li>
 			<li><a href="http://github.com/skyzyx/phpt/">PHPT Parser</a> &mdash; Parses PHPT unit test files. (MIT-licensed)</li>
-			<li><a href="http://alexgorbatchev.com/wiki/SyntaxHighlighter">Syntax Highlighter</a> &mdash; Used when displaying source code. (LGPL-licensed)
+			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 		</ul>
 	</div>
 
