--- a/template/layout.phtml
+++ b/template/layout.phtml
@@ -6,16 +6,15 @@
 		<meta http-equiv="Content-type" content="text/html; charset=utf-8">
 		<title><?= strip_tags($template['title']) ?></title>
 
-		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/main.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/shCore.css" type="text/css" media="screen" title="no title" charset="utf-8">
-		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/shThemeDefault.css" type="text/css" media="screen" title="no title" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/reset.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/main.css" type="text/css" media="screen" charset="utf-8">
+		<link rel="stylesheet" href="<?= $this->file_depth ?>styles/syntax.css" type="text/css" media="screen" charset="utf-8">
 
-	    <script src="<?= $this->file_depth ?>scripts/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
 	    <script src="<?= $this->file_depth ?>scripts/jquery-effect.js" type="text/javascript" charset="utf-8"></script>
 	    <script src="<?= $this->file_depth ?>scripts/main.js" type="text/javascript" charset="utf-8"></script>
-		<script src="<?= $this->file_depth ?>scripts/shCore.js" type="text/javascript" charset="utf-8"></script>
-		<script src="<?= $this->file_depth ?>scripts/shBrushPhp.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/chili/jquery.chili-2.2.js" type="text/javascript" charset="utf-8"></script>
+	    <script src="<?= $this->file_depth ?>scripts/chili/recipes.js" type="text/javascript" charset="utf-8"></script>
 
 	</head>
 	<body class="body_<?= strtolower($template['doctype']) ?>">
@@ -36,10 +35,5 @@
 				<?= $this->body ?>
 			</div>
 		</div>
-
-		<script type="text/javascript" charset="utf-8">
-		// SyntaxHighlighter.defaults['toolbar'] = false;
-		SyntaxHighlighter.all();
-		</script>
 	</body>
 </html>
