--- a/template/panel/index.html
+++ b/template/panel/index.html
@@ -5,17 +5,17 @@
 <head>
 	<title>panel</title>
 
-	<link rel="stylesheet" href="../styles/reset.css" type="text/css" media="screen" title="no title" charset="utf-8">
-	<link rel="stylesheet" href="../styles/panel.css" type="text/css" media="screen" title="no title" charset="utf-8">
+	<link rel="stylesheet" href="../styles/reset.css" type="text/css" media="screen" charset="utf-8">
+	<link rel="stylesheet" href="../styles/panel.css" type="text/css" media="screen" charset="utf-8">
 
 	<script src="search_index.js" type="text/javascript" charset="utf-8"></script>
 	<script src="tree.js" type="text/javascript" charset="utf-8"></script>
-	<script src="../scripts/jquery-1.3.2.min.js" type="text/javascript" charset="utf-8"></script>
+	<script src="../scripts/jquery-1.4.2.min.js" type="text/javascript" charset="utf-8"></script>
 	<script src="../scripts/searchdoc.js" type="text/javascript" charset="utf-8"></script>
 
 	<script type="text/javascript" charset="utf-8">
 	function placeholder() {
-	    if (jQuery.browser.safari) return;
+	    if ($.browser.safari) return;
 	    $('#search-label').click(function () {
 	        $('#search').focus();
 	        $('#search-label').hide();
