--- a/template/partials/properties.phtml
+++ b/template/partials/properties.phtml
@@ -7,7 +7,7 @@
 	<div class="description">
 		<? if (isset($property->description)): ?>
 			<? foreach ($property->description->line as $line): ?>
-				<p><?= Util::entitize($line) ?></p>
+				<p><?= Markdown(Util::entitize($line)) ?></p>
 			<? endforeach; ?>
 		<? endif; ?>
 
