The location hash now updates, except for with crosslinks.

--- a/template/index.phtml
+++ b/template/index.phtml
@@ -30,6 +30,9 @@
 				else if (classIndex) {
 					$('#mainContent').attr('src', 'class/' + classIndex.toLowerCase() + '/index.html');
 				}
+				else {
+					$('#mainContent').attr('src', 'README.html');
+				}
 			});
 			$(window).trigger('hashchange');
 		});
