--- a/template/partials/index.phtml
+++ b/template/partials/index.phtml
@@ -36,7 +36,7 @@
 				<dd>
 					<ul>
 						<? foreach ($methods as $method): ?>
-							<li><a href="<?= $method ?>.html"><?= $method; ?></a></li>
+							<li><a href="<?= $method ?>.html" rel="../../#m=<?= (string) $this->xml->class->name ?>/<?= $method ?>"><?= $method; ?></a></li>
 						<? endforeach; ?>
 					</ul>
 				</dd>
@@ -56,7 +56,7 @@
 				<dd>
 					<ul>
 						<? foreach ($constants as $constant): ?>
-							<li><a href="constants.html#<?= $constant ?>"><?= $constant; ?></a></li>
+							<li><a href="constants.html#<?= $constant ?>" rel="../../#c=<?= (string) $this->xml->class->name ?>/<?= $constant; ?>"><?= $constant; ?></a></li>
 						<? endforeach; ?>
 					</ul>
 				</dd>
@@ -76,7 +76,7 @@
 				<dd>
 					<ul>
 						<? foreach ($properties as $property): ?>
-							<li><a href="properties.html#<?= $property ?>"><?= $property; ?></a></li>
+							<li><a href="properties.html#<?= $property ?>" rel="../../#p=<?= (string) $this->xml->class->name ?>/<?= $property; ?>"><?= $property; ?></a></li>
 						<? endforeach; ?>
 					</ul>
 				</dd>
