--- a/template/partials/README.phtml
+++ b/template/partials/README.phtml
@@ -25,6 +25,7 @@
 			<li><a href="http://code.google.com/p/jquery-chili-js/">Chili</a> &mdash; Syntax highlighter for source code. (MIT-licensed)</li>
 			<li><a href="http://jquery.com">jQuery</a> &mdash; A fast and concise JavaScript Library that simplifies HTML document traversing, event handling, animating, and Ajax interactions for rapid web development. (MIT-licensed)</li>
 			<li><a href="http://benalman.com/projects/jquery-bbq-plugin/">jQuery BBQ</a> &mdash; Leverages the HTML5 hashchange event to allow simple, yet powerful bookmarkable #hash history. (MIT-licensed)</li>
+			<li><a href="http://github.com/skyzyx/examplify/">Examplify!</a> &mdash; Provides a comment-based syntax for editing working code samples. (MIT-licensed)</li>
 			<li><a href="http://github.com/skyzyx/phpt/">PHPT Parser</a> &mdash; Parses PHPT unit test files. (MIT-licensed)</li>
 			<li><a href="http://michelf.com/projects/php-markdown/">PHP Markdown</a> &mdash; Useful for converting large, free-form blocks of text into HTML. (BSD-licensed)</li>
 		</ul>
